# semantic-scholar-mcp

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
crates/cache/: Cargo.toml
crates/cache/src/: cache.rs
crates/embed/: Cargo.toml
crates/embed/src/: lib.rs
crates/local_cache/: Cargo.toml
crates/local_cache/src/: local_cache.rs
crates/ollama_embed/: Cargo.toml
crates/ollama_embed/src/: lib.rs
crates/semantic_scholar_mcp_tools/: Cargo.toml
crates/semantic_scholar_mcp_tools/src/: author_details.rs  author_papers.rs  author_references.rs  author_search.rs  paper_citations.rs  paper_details.rs  paper_recommendation.rs  paper_search.rs  semantic_scholar_mcp_tools.rs  utils.rs
scripts/: install.sh
src/: main.rs
