[package]
name = "semantic-scholar-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
context-server.workspace = true
context-server-utils = { git = "https://github.com/fdionisi/context-server", version = "0.1" }
directories = "6"
http-client.workspace = true
http-client-reqwest = { git = "https://github.com/fdionisi/http-client", version = "0.3" }
local_cache = { path = "crates/local_cache" }
ollama_embed = { path = "crates/ollama_embed" }
semantic_scholar_mcp_tools = { path = "crates/semantic_scholar_mcp_tools" }
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }

[workspace]
resolver = "3"
members = [
    "crates/cache",
    "crates/embed",
    "crates/local_cache",
    "crates/ollama_embed",
    "crates/semantic_scholar_mcp_tools",
]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
context-server = { git = "https://github.com/fdionisi/context-server", version = "0.8" }
http-client = { git = "https://github.com/fdionisi/http-client", version = "0.4" }
http-client-reqwest = { git = "https://github.com/fdionisi/http-client", version = "0.3" }
indoc = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2.1.3"
